<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">

    <!-- date toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/calendarHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/defaultColor">

        <ImageButton
            android:id="@+id/previousButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="@dimen/dp_85"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/forwardButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="@dimen/dp_85"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentDateLabel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_56"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_18"
            app:layout_constraintLeft_toRightOf="@id/previousButton"
            app:layout_constraintRight_toLeftOf="@id/forwardButton"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- eventDays header -->
    <LinearLayout
        android:id="@+id/abbreviationsBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:background="#dcdcdc"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:fontFamily="@font/avenirheavy"
            android:textSize="@dimen/sp_14"
            android:id="@+id/mondayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_monday"
            android:textColor="@color/daysLabelColor2" />

        <TextView
            android:fontFamily="@font/avenirheavy"
            android:textSize="@dimen/sp_14"
            android:id="@+id/tuesdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_tuesday"
            android:textColor="@color/daysLabelColor2" />

        <TextView
            android:fontFamily="@font/avenirheavy"
            android:textSize="@dimen/sp_14"
            android:id="@+id/wednesdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_wednesday"
            android:textColor="@color/daysLabelColor2" />

        <TextView
            android:fontFamily="@font/avenirheavy"
            android:textSize="@dimen/sp_14"
            android:id="@+id/thursdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_thursday"
            android:textColor="@color/daysLabelColor2" />

        <TextView
            android:textSize="@dimen/sp_14"
            android:fontFamily="@font/avenirheavy"
            android:id="@+id/fridayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_friday"
            android:textColor="@color/daysLabelColor2" />

        <TextView
            android:fontFamily="@font/avenirheavy"
            android:textSize="@dimen/sp_14"
            android:id="@+id/saturdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_saturday"
            android:textColor="@color/daysLabelColor2" />

        <TextView
            android:fontFamily="@font/avenirheavy"
            android:textSize="@dimen/sp_14"
            android:id="@+id/sundayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_sunday"
            android:textColor="@color/daysLabelColor2" />
    </LinearLayout>


    <com.example.tempcalendar.calender.extensions.CalendarViewPager
        android:layout_marginTop="@dimen/dp_5"
        android:id="@+id/calendarViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>